이미지스토리 삭제구현(외래키 삭제시 자식 엔티티삭제후 삭제)

--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -393,6 +393,11 @@
   color: #fff !important;
 }
 
+.cta.red{
+  background: red !important;
+  color: #000000; !important;
+}
+
 .modal-info {
   position: fixed;
   top: 0;
